tests/ui/eii/static/mismatch_static_fn.stderr
error: `#[hello]` must be used on a static
  --> $DIR/mismatch_static_fn.rs:10:1
   |
LL | #[hello]
   | ^^^^^^^^

error: aborting due to 1 previous error

